@@ -18,7 +18,6 @@ import org.locationtech.jts.geom.MultiLineString;
 import org.locationtech.jts.geom.MultiPolygon;
 import org.locationtech.jts.geom.Point;
 import org.locationtech.jts.geom.Polygon;
-import org.opentripplanner.common.geometry.GeometryUtils;
 import org.opentripplanner.common.geometry.SphericalDistanceLibrary;
 import org.opentripplanner.common.model.P2;
 import org.opentripplanner.graph_builder.DataImportIssueStore;
@@ -30,7 +29,7 @@ import org.opentripplanner.openstreetmap.model.OSMRelationMember;
 import org.opentripplanner.openstreetmap.model.OSMWithTags;
 import org.opentripplanner.routing.algorithm.astar.AStarBuilder;
 import org.opentripplanner.routing.algorithm.astar.strategies.SkipEdgeStrategy;
-import org.opentripplanner.routing.api.request.RoutingRequest;
+import org.opentripplanner.routing.api.request.RouteRequest;
 import org.opentripplanner.routing.core.RoutingContext;
 import org.opentripplanner.routing.core.State;
 import org.opentripplanner.routing.core.TraverseMode;
@@ -47,9 +46,8 @@ import org.opentripplanner.routing.spt.GraphPath;
 import org.opentripplanner.routing.spt.ShortestPathTree;
 import org.opentripplanner.routing.vertextype.IntersectionVertex;
 import org.opentripplanner.routing.vertextype.OsmVertex;
-import org.opentripplanner.util.I18NString;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import org.opentripplanner.transit.model.basic.I18NString;
+import org.opentripplanner.util.geometry.GeometryUtils;
 
 /**
  * Theoretically, it is not correct to build the visibility graph on the joined polygon of areas
@@ -71,8 +69,6 @@ import org.slf4j.LoggerFactory;
  */
 public class WalkableAreaBuilder {
 
-  private static final Logger LOG = LoggerFactory.getLogger(WalkableAreaBuilder.class);
-
   private final DataImportIssueStore issueStore;
 
   private final int maxAreaNodes;
@@ -80,8 +76,6 @@ public class WalkableAreaBuilder {
   private final Graph graph;
 
   private final OSMDatabase osmdb;
-
-  private final WayPropertySet wayPropertySet;
 
   private final Map<OSMWithTags, WayProperties> wayPropertiesCache = new HashMap<>();
 
@@ -93,23 +87,24 @@ public class WalkableAreaBuilder {
   private final boolean platformEntriesLinking;
 
   private final List<OsmVertex> platformLinkingEndpoints;
+  private final Set<String> boardingLocationRefTags;
 
   public WalkableAreaBuilder(
     Graph graph,
     OSMDatabase osmdb,
-    WayPropertySet wayPropertySet,
     Handler handler,
     DataImportIssueStore issueStore,
     int maxAreaNodes,
-    boolean platformEntriesLinking
+    boolean platformEntriesLinking,
+    Set<String> boardingLocationRefTags
   ) {
     this.graph = graph;
     this.osmdb = osmdb;
-    this.wayPropertySet = wayPropertySet;
     this.handler = handler;
     this.issueStore = issueStore;
     this.maxAreaNodes = maxAreaNodes;
     this.platformEntriesLinking = platformEntriesLinking;
+    this.boardingLocationRefTags = boardingLocationRefTags;
     this.platformLinkingEndpoints =
       platformEntriesLinking
         ? graph
@@ -127,11 +122,12 @@ public class WalkableAreaBuilder {
    * visibility calculations
    */
   public void buildWithoutVisibility(AreaGroup group) {
-    Set<Edge> edges = new HashSet<>();
+    var references = getStopReferences(group);
 
     // create polygon and accumulate nodes for area
     for (Ring ring : group.outermostRings) {
-      AreaEdgeList edgeList = new AreaEdgeList(ring.jtsPolygon);
+      Set<AreaEdge> edges = new HashSet<>();
+      AreaEdgeList edgeList = new AreaEdgeList(ring.jtsPolygon, references);
       // the points corresponding to concave or hole vertices
       // or those linked to ways
       HashSet<P2<OSMNode>> alreadyAddedEdges = new HashSet<>();
@@ -159,6 +155,17 @@ public class WalkableAreaBuilder {
           }
         }
       }
+      edges
+        .stream()
+        .flatMap(v ->
+          Stream
+            .of(v.getFromVertex(), v.getToVertex())
+            .filter(IntersectionVertex.class::isInstance)
+            .map(IntersectionVertex.class::cast)
+        )
+        .forEach(edgeList.visibilityVertices::add);
+
+      createNamedAreas(edgeList, ring, group.areas);
     }
   }
 
@@ -186,16 +193,19 @@ public class WalkableAreaBuilder {
       )
       .collect(Collectors.toSet());
 
+    var references = getStopReferences(group);
+
     // create polygon and accumulate nodes for area
     for (Ring ring : group.outermostRings) {
       Polygon polygon = ring.jtsPolygon;
-      AreaEdgeList edgeList = new AreaEdgeList(polygon);
+
+      AreaEdgeList edgeList = new AreaEdgeList(polygon, references);
 
       // the points corresponding to concave or hole vertices
       // or those linked to ways
       HashSet<OSMNode> visibilityNodes = new HashSet<>();
       HashSet<P2<OSMNode>> alreadyAddedEdges = new HashSet<>();
-      HashSet<OsmVertex> platformLinkingVertices = new HashSet<>();
+      HashSet<IntersectionVertex> platformLinkingVertices = new HashSet<>();
       // we need to accumulate visibility points from all contained areas
       // inside this ring, but only for shared nodes; we don't care about
       // convexity, which we'll handle for the grouped area only.
@@ -215,7 +225,7 @@ public class WalkableAreaBuilder {
         Collection<OSMNode> nodes = osmdb.getStopsInArea(area.parent);
         if (nodes != null) {
           for (OSMNode node : nodes) {
-            OsmVertex vertex = handler.getVertexForOsmNode(node, areaEntity);
+            var vertex = handler.getVertexForOsmNode(node, areaEntity);
             platformLinkingVertices.add(vertex);
             visibilityNodes.add(node);
             startingNodes.add(node);
@@ -231,7 +241,7 @@ public class WalkableAreaBuilder {
               .filter(t ->
                 outerRing.jtsPolygon.contains(geometryFactory.createPoint(t.getCoordinate()))
               )
-              .collect(Collectors.toList());
+              .toList();
             platformLinkingVertices.addAll(endpointsWithin);
             for (OsmVertex v : endpointsWithin) {
               OSMNode node = osmdb.getNode(v.nodeId);
@@ -346,6 +356,14 @@ public class WalkableAreaBuilder {
     pruneAreaEdges(startingVertices, edges, ringEdges);
   }
 
+  private Set<String> getStopReferences(AreaGroup group) {
+    return group.areas
+      .stream()
+      .filter(g -> g.parent.isBoardingLocation())
+      .flatMap(g -> g.parent.getMultiTagValues(boardingLocationRefTags).stream())
+      .collect(Collectors.toSet());
+  }
+
   /**
    * Do an all-pairs shortest path search from a list of vertices over a specified set of edges, and
    * retain only those edges which are actually used in some shortest path.
@@ -366,7 +384,7 @@ public class WalkableAreaBuilder {
     } else {
       mode = TraverseMode.CAR;
     }
-    RoutingRequest options = new RoutingRequest(mode);
+    RouteRequest options = new RouteRequest(mode);
     Set<Edge> usedEdges = new HashSet<>();
     for (Vertex vertex : startingVertices) {
       ShortestPathTree spt = AStarBuilder
@@ -456,7 +474,10 @@ public class WalkableAreaBuilder {
         StreetTraversalPermission.PEDESTRIAN_AND_BICYCLE
       );
 
-      float carSpeed = wayPropertySet.getCarSpeedForWay(areaEntity, false);
+      float carSpeed = areaEntity
+        .getOsmProvider()
+        .getWayPropertySet()
+        .getCarSpeedForWay(areaEntity, false);
 
       double length = SphericalDistanceLibrary.distance(
         startEndpoint.getCoordinate(),
@@ -529,7 +550,10 @@ public class WalkableAreaBuilder {
       backStreet.setStreetClass(cls);
 
       if (!wayPropertiesCache.containsKey(areaEntity)) {
-        WayProperties wayData = wayPropertySet.getDataForWay(areaEntity);
+        WayProperties wayData = areaEntity
+          .getOsmProvider()
+          .getWayPropertySet()
+          .getDataForWay(areaEntity);
         wayPropertiesCache.put(areaEntity, wayData);
       }
 
@@ -615,12 +639,18 @@ public class WalkableAreaBuilder {
       namedArea.setName(name);
 
       if (!wayPropertiesCache.containsKey(areaEntity)) {
-        WayProperties wayData = wayPropertySet.getDataForWay(areaEntity);
+        WayProperties wayData = areaEntity
+          .getOsmProvider()
+          .getWayPropertySet()
+          .getDataForWay(areaEntity);
         wayPropertiesCache.put(areaEntity, wayData);
       }
 
-      Double safety = wayPropertiesCache.get(areaEntity).getSafetyFeatures().first;
-      namedArea.setBicycleSafetyMultiplier(safety);
+      Double bicycleSafety = wayPropertiesCache.get(areaEntity).getBicycleSafetyFeatures().first;
+      namedArea.setBicycleSafetyMultiplier(bicycleSafety);
+
+      Double walkSafety = wayPropertiesCache.get(areaEntity).getWalkSafetyFeatures().first;
+      namedArea.setWalkSafetyMultiplier(walkSafety);
 
       namedArea.setOriginalEdges(intersection);
 
