@@ -8,9 +8,12 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.function.Consumer;
 import java.util.function.DoubleFunction;
-import java.util.stream.Collectors;
+import java.util.function.Function;
+import org.opentripplanner.ext.accessibilityscore.AccessibilityScoreFilter;
+import org.opentripplanner.ext.fares.FaresFilter;
 import org.opentripplanner.model.plan.Itinerary;
 import org.opentripplanner.model.plan.SortOrder;
+import org.opentripplanner.routing.algorithm.filterchain.api.TransitGeneralizedCostFilterParams;
 import org.opentripplanner.routing.algorithm.filterchain.comparator.SortOrderComparator;
 import org.opentripplanner.routing.algorithm.filterchain.deletionflagger.LatestDepartureTimeFilter;
 import org.opentripplanner.routing.algorithm.filterchain.deletionflagger.MaxLimitFilter;
@@ -21,14 +24,19 @@ import org.opentripplanner.routing.algorithm.filterchain.deletionflagger.RemoveP
 import org.opentripplanner.routing.algorithm.filterchain.deletionflagger.RemoveTransitIfStreetOnlyIsBetterFilter;
 import org.opentripplanner.routing.algorithm.filterchain.deletionflagger.RemoveWalkOnlyFilter;
 import org.opentripplanner.routing.algorithm.filterchain.deletionflagger.TransitGeneralizedCostFilter;
-import org.opentripplanner.routing.algorithm.filterchain.filter.AccessibilityScoreFilter;
 import org.opentripplanner.routing.algorithm.filterchain.filter.DeletionFlaggingFilter;
 import org.opentripplanner.routing.algorithm.filterchain.filter.GroupByFilter;
 import org.opentripplanner.routing.algorithm.filterchain.filter.RemoveDeletionFlagForLeastTransfersItinerary;
 import org.opentripplanner.routing.algorithm.filterchain.filter.SameFirstOrLastTripFilter;
 import org.opentripplanner.routing.algorithm.filterchain.filter.SortingFilter;
+import org.opentripplanner.routing.algorithm.filterchain.filter.TransitAlertFilter;
 import org.opentripplanner.routing.algorithm.filterchain.groupids.GroupByAllSameStations;
-import org.opentripplanner.routing.algorithm.filterchain.groupids.GroupByTripIdAndDistance;
+import org.opentripplanner.routing.algorithm.filterchain.groupids.GroupByDistance;
+import org.opentripplanner.routing.algorithm.filterchain.groupids.GroupBySameRoutesAndStops;
+import org.opentripplanner.routing.fares.FareService;
+import org.opentripplanner.routing.services.TransitAlertService;
+import org.opentripplanner.transit.model.site.MultiModalStation;
+import org.opentripplanner.transit.model.site.Station;
 
 /**
  * Create a filter chain based on the given config.
@@ -46,13 +54,18 @@ public class ItineraryListFilterChainBuilder {
   private boolean removeTransitWithHigherCostThanBestOnStreetOnly = true;
   private boolean removeWalkAllTheWayResults;
   private boolean sameFirstOrLastTripFilter;
-  private DoubleFunction<Double> transitGeneralizedCostLimit;
+  private TransitGeneralizedCostFilterParams transitGeneralizedCostFilterParams;
   private double bikeRentalDistanceRatio;
   private double parkAndRideDurationRatio;
   private DoubleFunction<Double> nonTransitGeneralizedCostLimit;
   private Instant latestDepartureTimeLimit = null;
   private Consumer<Itinerary> maxLimitReachedSubscriber;
   private boolean accessibilityScore;
+  private double wheelchairMaxSlope;
+  private FareService faresService;
+  private TransitAlertService transitAlertService;
+  private Function<Station, MultiModalStation> getMultiModalStation;
+  private boolean removeItinerariesWithSameRoutesAndStops;
 
   public ItineraryListFilterChainBuilder(SortOrder sortOrder) {
     this.sortOrder = sortOrder;
@@ -98,23 +111,32 @@ public class ItineraryListFilterChainBuilder {
   }
 
   /**
-   * This function is used to compute a max-limit for generalized-cost. The limit is applied to
-   * itineraries with at least one transit leg. Street-only itineraries are not considered.
+   * The given parameters is used to compare all itineraries with each other, dropping itineraries
+   * with a high relative cost. The limit is applied to itineraries with at least one transit
+   * leg. Street-only itineraries are not considered.
    * <p>
-   * The smallest transit leg generalized-cost value is used as input to the function. For example
-   * if the function is {@code f(x) = 1800 + 2.0 x} and the smallest cost is {@code 5000}, then all
-   * transit itineraries with a cost larger than {@code 1800 + 2 * 5000 = 11 800} is dropped.
+   * For all pairs {code (i1, i2)} in the set of returned itineraries, a generalized cost limit is
+   * computed. If the generalized-cost of i1 is less then the generalized-cost of i2, i2 is dropped if:
+   * <pre>
+   * t0 := is the time between i1 and i2.
+   *
+   * limit = i1.generalized-cost * costFactor + minimumCostDifference + t0 * itineraryIntervalRelaxFactor
+   *
+   * i2 is dropped if i2.generalized-cost is greater than the limit.
+   * </pre>
+   * @param transitGeneralizedCostFilterParams container for costFactor, minimumCostDifference and
+   *                                           itineraryIntervalRelaxFactor
    */
   public ItineraryListFilterChainBuilder withTransitGeneralizedCostLimit(
-    DoubleFunction<Double> value
+    TransitGeneralizedCostFilterParams transitGeneralizedCostFilterParams
   ) {
-    this.transitGeneralizedCostLimit = value;
+    this.transitGeneralizedCostFilterParams = transitGeneralizedCostFilterParams;
     return this;
   }
 
   /**
-   * This is a a bit similar to {@link #withTransitGeneralizedCostLimit(DoubleFunction)}, with a few
-   * important differences.
+   * This is a bit similar to {@link #withTransitGeneralizedCostLimit(TransitGeneralizedCostFilterParams)},
+   * with a few important differences.
    * <p>
    * This function is used to compute a max-limit for generalized-cost. The limit is applied to
    * itineraries with no transit legs, however ALL itineraries (including those with transit legs)
@@ -170,7 +192,7 @@ public class ItineraryListFilterChainBuilder {
 
   /**
    * This will NOT delete itineraries, but tag them as deleted using the {@link
-   * Itinerary#systemNotices}.
+   * Itinerary#getSystemNotices()}.
    */
   public ItineraryListFilterChainBuilder withDebugEnabled(boolean value) {
     this.debug = value;
@@ -220,8 +242,28 @@ public class ItineraryListFilterChainBuilder {
     return this;
   }
 
-  public ItineraryListFilterChainBuilder withAccessibilityScore(boolean enable) {
+  /**
+   * Enable the IBI feature for calculating a very simple numeric accessibility score between 0 and
+   * 1 for each leg in the itinerary.
+   */
+  public ItineraryListFilterChainBuilder withAccessibilityScore(
+    boolean enable,
+    double wheelchairMaxSlope
+  ) {
     this.accessibilityScore = enable;
+    this.wheelchairMaxSlope = wheelchairMaxSlope;
+    return this;
+  }
+
+  public ItineraryListFilterChainBuilder withFares(FareService fareService) {
+    this.faresService = fareService;
+    return this;
+  }
+
+  public ItineraryListFilterChainBuilder withRemoveTimeshiftedItinerariesWithSameRoutesAndStops(
+    boolean remove
+  ) {
+    this.removeItinerariesWithSameRoutesAndStops = remove;
     return this;
   }
 
@@ -231,19 +273,31 @@ public class ItineraryListFilterChainBuilder {
 
     filters.addAll(buildGroupByTripIdAndDistanceFilters());
 
+    filters.addAll(buildGroupBySameRoutesAndStopsFilter());
+
     if (sameFirstOrLastTripFilter) {
       filters.add(new SortingFilter(generalizedCostComparator()));
       filters.add(new SameFirstOrLastTripFilter());
     }
 
     if (accessibilityScore) {
-      filters.add(new AccessibilityScoreFilter());
+      filters.add(new AccessibilityScoreFilter(wheelchairMaxSlope));
+    }
+
+    if (faresService != null) {
+      filters.add(new FaresFilter(faresService));
+    }
+
+    if (transitAlertService != null) {
+      filters.add(new TransitAlertFilter(transitAlertService, getMultiModalStation));
     }
 
     // Filter transit itineraries on generalized-cost
-    if (transitGeneralizedCostLimit != null) {
+    if (transitGeneralizedCostFilterParams != null) {
       filters.add(
-        new DeletionFlaggingFilter(new TransitGeneralizedCostFilter(transitGeneralizedCostLimit))
+        new DeletionFlaggingFilter(
+          new TransitGeneralizedCostFilter(transitGeneralizedCostFilterParams)
+        )
       );
     }
 
@@ -319,6 +373,37 @@ public class ItineraryListFilterChainBuilder {
   }
 
   /**
+   * If enabled, this adds the filter to remove itineraries which have the same stops and routes.
+   * These are sometimes called "time-shifted duplicates" but since those terms have so many meanings
+   * we chose to use a long, but descriptive name instead.
+   */
+  private List<ItineraryListFilter> buildGroupBySameRoutesAndStopsFilter() {
+    if (removeItinerariesWithSameRoutesAndStops) {
+      return List.of(
+        new GroupByFilter<>(
+          GroupBySameRoutesAndStops::new,
+          List.of(
+            new SortingFilter(SortOrderComparator.comparator(sortOrder)),
+            new DeletionFlaggingFilter(new MaxLimitFilter(GroupBySameRoutesAndStops.TAG, 1))
+          )
+        )
+      );
+    } else {
+      return List.of();
+    }
+  }
+
+  public ItineraryListFilterChainBuilder withTransitAlerts(
+    TransitAlertService transitAlertService,
+    Function<Station, MultiModalStation> getMultiModalStation
+  ) {
+    this.transitAlertService = transitAlertService;
+    this.getMultiModalStation = getMultiModalStation;
+
+    return this;
+  }
+
+  /**
    * These filters will group the itineraries by the main-legs and reduce the number of itineraries
    * in each group. The main legs is the legs that together constitute more than a given　percentage
    * of the total travel distance.
@@ -332,21 +417,20 @@ public class ItineraryListFilterChainBuilder {
     List<GroupBySimilarity> groupBy = groupBySimilarity
       .stream()
       .sorted(Comparator.comparingDouble(o -> o.groupByP))
-      .collect(Collectors.toList());
+      .toList();
 
     List<ItineraryListFilter> groupByFilters = new ArrayList<>();
 
-    for (GroupBySimilarity it : groupBy) {
+    for (GroupBySimilarity group : groupBy) {
       String name =
-        "similar-legs-filter-" +
-        (int) (100d * it.groupByP) +
-        "p-" +
-        it.maxNumOfItinerariesPerGroup +
-        "x";
+        "similar-legs-filter-%.0fp-%dx".formatted(
+            100d * group.groupByP,
+            group.maxNumOfItinerariesPerGroup
+          );
 
       List<ItineraryListFilter> nested = new ArrayList<>();
 
-      if (it.nestedGroupingByAllSameStations) {
+      if (group.nestedGroupingByAllSameStations) {
         final String innerGroupName = name + "-group-by-all-same-stations";
         nested.add(
           new GroupByFilter<>(
@@ -359,26 +443,23 @@ public class ItineraryListFilterChainBuilder {
         );
       }
 
-      if (it.maxCostOtherLegsFactor > 1.0) {
+      if (group.maxCostOtherLegsFactor > 1.0) {
         nested.add(
           new DeletionFlaggingFilter(
-            new OtherThanSameLegsMaxGeneralizedCostFilter(it.maxCostOtherLegsFactor)
+            new OtherThanSameLegsMaxGeneralizedCostFilter(group.maxCostOtherLegsFactor)
           )
         );
       }
 
       nested.add(new SortingFilter(generalizedCostComparator()));
       nested.add(
-        new DeletionFlaggingFilter(new MaxLimitFilter(name, it.maxNumOfItinerariesPerGroup))
+        new DeletionFlaggingFilter(new MaxLimitFilter(name, group.maxNumOfItinerariesPerGroup))
       );
 
       nested.add(new RemoveDeletionFlagForLeastTransfersItinerary());
 
       groupByFilters.add(
-        new GroupByFilter<>(
-          itinerary -> new GroupByTripIdAndDistance(itinerary, it.groupByP),
-          nested
-        )
+        new GroupByFilter<>(it -> new GroupByDistance(it, group.groupByP), nested)
       );
     }
 
