@@ -1,22 +1,21 @@
 package org.opentripplanner.datastore.file;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
-import static org.opentripplanner.datastore.FileType.GTFS;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.opentripplanner.datastore.api.FileType.GTFS;
 
 import java.io.File;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.apache.commons.io.IOUtils;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 import org.opentripplanner.ConstantsForTests;
-import org.opentripplanner.datastore.CompositeDataSource;
-import org.opentripplanner.datastore.DataSource;
+import org.opentripplanner.datastore.api.CompositeDataSource;
+import org.opentripplanner.datastore.api.DataSource;
 
 public class ZipFileDataSourceTest {
 
@@ -34,14 +33,14 @@ public class ZipFileDataSourceTest {
     String expectedPath = target.getPath();
 
     // Verify zip file exist before we start the test
-    assertTrue(target.getAbsolutePath(), target.exists());
+    assertTrue(target.exists(), target.getAbsolutePath());
 
     // Then
     assertEquals("caltrain_gtfs.zip", subject.name());
     assertEquals(expectedPath, subject.path());
     assertEquals(GTFS, subject.type());
-    assertTrue("Last modified: " + subject.lastModified(), subject.lastModified() > TIME);
-    assertTrue("Size: " + subject.size(), subject.size() > 100);
+    assertTrue(subject.lastModified() > TIME, "Last modified: " + subject.lastModified());
+    assertTrue(subject.size() > 100, "Size: " + subject.size());
     assertTrue(subject.exists());
     // We do not support writing to zip files
     assertFalse(subject.isWritable());
@@ -61,12 +60,12 @@ public class ZipFileDataSourceTest {
     CompositeDataSource subject = new ZipFileDataSource(target, GTFS);
 
     Collection<DataSource> content = subject.content();
-    Collection<String> names = content.stream().map(it -> it.name()).collect(Collectors.toList());
+    Collection<String> names = content.stream().map(DataSource::name).toList();
 
     //System.out.println(names);
     assertTrue(
-      names.toString(),
-      names.containsAll(List.of("agency.txt", "stops.txt", "trips.txt"))
+      names.containsAll(List.of("agency.txt", "stops.txt", "trips.txt")),
+      names.toString()
     );
 
     DataSource entry = subject.entry("agency.txt");
@@ -89,8 +88,8 @@ public class ZipFileDataSourceTest {
     assertEquals("trips.txt", entry.name());
     assertEquals("trips.txt (" + subject.path() + ")", entry.path());
     assertEquals(GTFS, entry.type());
-    assertTrue("Last modified: " + entry.lastModified(), entry.lastModified() > TIME);
-    assertTrue("Size: " + entry.size(), entry.size() > 100);
+    assertTrue(entry.lastModified() > TIME, "Last modified: " + entry.lastModified());
+    assertTrue(entry.size() > 100, "Size: " + entry.size());
     assertTrue(entry.exists());
     // We do not support writing to zip entries
     assertFalse(entry.isWritable());
@@ -102,15 +101,7 @@ public class ZipFileDataSourceTest {
     File target = new File(FILENAME);
     CompositeDataSource subject = new ZipFileDataSource(target, GTFS);
 
-    // delete entry is not implemented
-    try {
-      // When:
-      subject.delete();
-
-      // Then:
-      fail("Expected delete to throw an exception.");
-    } catch (Exception e) {
-      assertTrue(e.getMessage().contains("ZipFileDataSource"));
-    }
+    // When: delete entry is not implemented
+    assertThrows(Exception.class, subject::delete, "ZipFileDataSource");
   }
 }
