@@ -4,14 +4,15 @@ import java.io.File;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.Arrays;
-import java.util.HashMap;
 import java.util.List;
+import java.util.Set;
+import org.opentripplanner.TestOtpModel;
+import org.opentripplanner.graph_builder.DataImportIssueStore;
 import org.opentripplanner.graph_builder.linking.LinkingDirection;
 import org.opentripplanner.graph_builder.linking.VertexLinker;
 import org.opentripplanner.graph_builder.model.GtfsBundle;
 import org.opentripplanner.graph_builder.module.osm.DefaultWayPropertySetSource;
 import org.opentripplanner.graph_builder.module.osm.OpenStreetMapModule;
-import org.opentripplanner.model.Stop;
 import org.opentripplanner.model.calendar.ServiceDateInterval;
 import org.opentripplanner.openstreetmap.OpenStreetMapProvider;
 import org.opentripplanner.routing.core.TraverseMode;
@@ -19,6 +20,12 @@ import org.opentripplanner.routing.core.TraverseModeSet;
 import org.opentripplanner.routing.edgetype.StreetTransitStopLink;
 import org.opentripplanner.routing.graph.Graph;
 import org.opentripplanner.routing.vertextype.TransitStopVertex;
+import org.opentripplanner.routing.vertextype.TransitStopVertexBuilder;
+import org.opentripplanner.transit.model._data.TransitModelForTest;
+import org.opentripplanner.transit.model.framework.Deduplicator;
+import org.opentripplanner.transit.model.site.RegularStop;
+import org.opentripplanner.transit.service.StopModel;
+import org.opentripplanner.transit.service.TransitModel;
 
 /**
  * Get graphs of Columbus Ohio with real OSM streets and a synthetic transit system for use in
@@ -27,17 +34,26 @@ import org.opentripplanner.routing.vertextype.TransitStopVertex;
 public class FakeGraph {
 
   /** Build a graph in Columbus, OH with no transit */
-  public static Graph buildGraphNoTransit() throws URISyntaxException {
-    Graph gg = new Graph();
+  public static TestOtpModel buildGraphNoTransit() throws URISyntaxException {
+    var deduplicator = new Deduplicator();
+    var stopModel = new StopModel();
+    var gg = new Graph(deduplicator);
+    var transitModel = new TransitModel(stopModel, deduplicator);
 
     File file = getFileForResource("columbus.osm.pbf");
     OpenStreetMapProvider provider = new OpenStreetMapProvider(file, false);
 
-    OpenStreetMapModule loader = new OpenStreetMapModule(provider);
-    loader.setDefaultWayPropertySetSource(new DefaultWayPropertySetSource());
+    OpenStreetMapModule osmModule = new OpenStreetMapModule(
+      List.of(provider),
+      Set.of(),
+      gg,
+      transitModel.getTimeZone(),
+      DataImportIssueStore.noopIssueStore()
+    );
+    osmModule.setDefaultWayPropertySetSource(new DefaultWayPropertySetSource());
 
-    loader.buildGraph(gg, new HashMap<>());
-    return gg;
+    osmModule.buildGraph();
+    return new TestOtpModel(gg, transitModel);
   }
 
   public static File getFileForResource(String resource) throws URISyntaxException {
@@ -48,66 +64,70 @@ public class FakeGraph {
   /**
    * Add many transit lines to a lot of stops. This is only used by InitialStopsTest.
    */
-  public static void addTransitMultipleLines(Graph g) throws URISyntaxException {
+  public static void addTransitMultipleLines(Graph g, TransitModel transitModel)
+    throws URISyntaxException {
     GtfsModule gtfs = new GtfsModule(
       Arrays.asList(new GtfsBundle(getFileForResource("addTransitMultipleLines.gtfs.zip"))),
+      transitModel,
+      g,
       ServiceDateInterval.unbounded()
     );
-    gtfs.buildGraph(g, new HashMap<>());
+    gtfs.buildGraph();
   }
 
   /**
    * This introduces a 1MB test resource but is only used by TestIntermediatePlaces.
    */
-  public static void addPerpendicularRoutes(Graph graph) throws URISyntaxException {
-    GtfsModule gtfs = new GtfsModule(
-      Arrays.asList(new GtfsBundle(getFileForResource("addPerpendicularRoutes.gtfs.zip"))),
-      ServiceDateInterval.unbounded()
-    );
-    gtfs.buildGraph(graph, new HashMap<>());
+  public static void addPerpendicularRoutes(Graph graph, TransitModel transitModel)
+    throws URISyntaxException {
+    var input = List.of(new GtfsBundle(getFileForResource("addPerpendicularRoutes.gtfs.zip")));
+    new GtfsModule(input, transitModel, graph, ServiceDateInterval.unbounded()).buildGraph();
   }
 
   /** Add a regular grid of stops to the graph */
-  public static void addRegularStopGrid(Graph g) {
+  public static void addRegularStopGrid(Graph g, TransitModel transitModel) {
     int count = 0;
     for (double lat = 39.9058; lat < 40.0281; lat += 0.005) {
       for (double lon = -83.1341; lon < -82.8646; lon += 0.005) {
         String id = Integer.toString(count++);
-        Stop stop = Stop.stopForTest(id, lat, lon);
-        new TransitStopVertex(g, stop, null);
+        RegularStop stop = TransitModelForTest.stop(id).withCoordinate(lat, lon).build();
+        new TransitStopVertexBuilder().withGraph(g).withStop(stop).build();
       }
     }
   }
 
   /** add some extra stops to the graph */
-  public static void addExtraStops(Graph g) {
+  public static void addExtraStops(Graph g, TransitModel transitModel) {
     int count = 0;
     double lon = -83;
     for (double lat = 40; lat < 40.01; lat += 0.005) {
       String id = "EXTRA_" + count++;
-      Stop stop = Stop.stopForTest(id, lat, lon);
-      new TransitStopVertex(g, stop, null);
+      RegularStop stop = TransitModelForTest.stop(id).withCoordinate(lat, lon).build();
+      new TransitStopVertexBuilder().withGraph(g).withStop(stop).build();
     }
 
     // add some duplicate stops, identical to the regular stop grid
     lon = -83.1341 + 0.1;
     for (double lat = 39.9058; lat < 40.0281; lat += 0.005) {
       String id = "DUPE_" + count++;
-      Stop stop = Stop.stopForTest(id, lat, lon);
-      new TransitStopVertex(g, stop, null);
+      RegularStop stop = TransitModelForTest.stop(id).withCoordinate(lat, lon).build();
+      new TransitStopVertexBuilder().withGraph(g).withStop(stop).build();
     }
 
     // add some almost duplicate stops
     lon = -83.1341 + 0.15;
     for (double lat = 39.9059; lat < 40.0281; lat += 0.005) {
       String id = "ALMOST_" + count++;
-      Stop stop = Stop.stopForTest(id, lat, lon);
-      new TransitStopVertex(g, stop, null);
+      RegularStop stop = TransitModelForTest.stop(id).withCoordinate(lat, lon).build();
+      new TransitStopVertexBuilder().withGraph(g).withStop(stop).build();
     }
   }
 
   /** link the stops in the graph */
-  public static void link(Graph graph) {
+  public static void link(Graph graph, TransitModel transitModel) {
+    transitModel.index();
+    graph.index(transitModel.getStopModel());
+
     VertexLinker linker = graph.getLinker();
 
     for (TransitStopVertex tStop : graph.getVerticesOfType(TransitStopVertex.class)) {
