@@ -1,39 +1,39 @@
 package org.opentripplanner.netex;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import com.google.common.collect.Multimap;
 import java.io.Serializable;
+import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 import org.opentripplanner.ConstantsForTests;
 import org.opentripplanner.graph_builder.DataImportIssueStore;
-import org.opentripplanner.model.MultiModalStation;
-import org.opentripplanner.model.Notice;
 import org.opentripplanner.model.OtpTransitService;
-import org.opentripplanner.model.Station;
-import org.opentripplanner.model.Stop;
-import org.opentripplanner.model.StopTimeKey;
-import org.opentripplanner.model.TripPattern;
-import org.opentripplanner.model.WheelchairAccessibility;
 import org.opentripplanner.model.calendar.CalendarServiceData;
-import org.opentripplanner.model.calendar.ServiceDate;
 import org.opentripplanner.model.impl.OtpTransitServiceBuilder;
-import org.opentripplanner.routing.trippattern.Deduplicator;
-import org.opentripplanner.transit.model.basic.FeedScopedId;
-import org.opentripplanner.transit.model.basic.TransitEntity;
+import org.opentripplanner.transit.model.basic.Accessibility;
+import org.opentripplanner.transit.model.basic.Notice;
+import org.opentripplanner.transit.model.framework.AbstractTransitEntity;
+import org.opentripplanner.transit.model.framework.Deduplicator;
+import org.opentripplanner.transit.model.framework.FeedScopedId;
 import org.opentripplanner.transit.model.network.BikeAccess;
+import org.opentripplanner.transit.model.network.TripPattern;
 import org.opentripplanner.transit.model.organization.Agency;
 import org.opentripplanner.transit.model.organization.Operator;
+import org.opentripplanner.transit.model.site.MultiModalStation;
+import org.opentripplanner.transit.model.site.RegularStop;
+import org.opentripplanner.transit.model.site.Station;
+import org.opentripplanner.transit.model.timetable.StopTimeKey;
 import org.opentripplanner.transit.model.timetable.Trip;
 
 /**
@@ -60,17 +60,17 @@ public class NetexBundleSmokeTest {
     // When
     OtpTransitServiceBuilder transitBuilder = netexBundle.loadBundle(
       new Deduplicator(),
-      new DataImportIssueStore(false)
+      DataImportIssueStore.noopIssueStore()
     );
 
     // Then - smoke test model
     OtpTransitService otpModel = transitBuilder.build();
 
     assertAgencies(otpModel.getAllAgencies());
-    assertMultiModalStations(otpModel.getAllMultiModalStations());
+    assertMultiModalStations(otpModel.stopModel().listMultiModalStations());
     assertOperators(otpModel.getAllOperators());
-    assertStops(otpModel.getAllStops());
-    assertStations(otpModel.getAllStations());
+    assertStops(otpModel.stopModel().listRegularStops());
+    assertStations(otpModel.stopModel().listStations());
     assertTripPatterns(otpModel.getTripPatterns());
     assertTrips(otpModel.getAllTrips());
     assertServiceIds(otpModel.getAllTrips(), otpModel.getAllServiceIds());
@@ -87,7 +87,7 @@ public class NetexBundleSmokeTest {
   }
 
   private static StopTimeKey stId(String id, int stopSequenceNr) {
-    return new StopTimeKey(fId(id), stopSequenceNr);
+    return StopTimeKey.of(fId(id), stopSequenceNr).build();
   }
 
   private static FeedScopedId fId(String id) {
@@ -100,7 +100,7 @@ public class NetexBundleSmokeTest {
     assertEquals("RUT:Authority:RUT", a.getId().getId());
     assertEquals("RUT", a.getName());
     assertNull(a.getUrl());
-    assertEquals("Europe/Oslo", a.getTimezone());
+    assertEquals("Europe/Oslo", a.getTimezone().getId());
     assertNull(a.getLang());
     assertNull(a.getPhone());
     assertNull(a.getFareUrl());
@@ -127,15 +127,17 @@ public class NetexBundleSmokeTest {
     assertNull(o.getPhone());
   }
 
-  private void assertStops(Collection<Stop> stops) {
-    Map<FeedScopedId, Stop> map = stops.stream().collect(Collectors.toMap(Stop::getId, s -> s));
+  private void assertStops(Collection<RegularStop> stops) {
+    Map<FeedScopedId, RegularStop> map = stops
+      .stream()
+      .collect(Collectors.toMap(RegularStop::getId, s -> s));
 
-    Stop quay = map.get(fId("NSR:Quay:122003"));
+    RegularStop quay = map.get(fId("NSR:Quay:122003"));
     assertEquals("N/A", quay.getName().toString());
     assertEquals(59.909803, quay.getLat(), 0.000001);
     assertEquals(10.748062, quay.getLon(), 0.000001);
     assertEquals("RB:NSR:StopPlace:3995", quay.getParentStation().getId().toString());
-    assertEquals("L", quay.getCode());
+    assertEquals("L", quay.getPlatformCode());
     assertEquals(16, stops.size());
   }
 
@@ -157,14 +159,15 @@ public class NetexBundleSmokeTest {
     TripPattern p = map.get(fId("RUT:JourneyPattern:12-1"));
     assertEquals("Jernbanetorget", p.getTripHeadsign());
     assertEquals("RB", p.getFeedId());
-    assertEquals("[<Stop RB:NSR:Quay:7203>, <Stop RB:NSR:Quay:8027>]", p.getStops().toString());
     assertEquals(
-      "[<Trip RB:RUT:ServiceJourney:12-101375-1000>]",
-      p.scheduledTripsAsStream().collect(Collectors.toList()).toString()
+      "[RegularStop{RB:NSR:Quay:7203 N/A}, RegularStop{RB:NSR:Quay:8027 N/A}]",
+      p.getStops().toString()
+    );
+    assertEquals(
+      "[Trip{RB:RUT:ServiceJourney:12-101375-1000 12}]",
+      p.scheduledTripsAsStream().toList().toString()
     );
 
-    // TODO OTP2 - Why?
-    assertNull(p.getServices());
     assertEquals(4, patterns.size());
   }
 
@@ -177,11 +180,11 @@ public class NetexBundleSmokeTest {
     assertNotNull(t.getServiceId());
     assertEquals("Ruter", t.getOperator().getName());
     assertEquals(BikeAccess.UNKNOWN, t.getBikesAllowed());
-    assertEquals(WheelchairAccessibility.NO_INFORMATION, t.getWheelchairBoarding());
+    assertEquals(Accessibility.NO_INFORMATION, t.getWheelchairBoarding());
     assertEquals(4, trips.size());
   }
 
-  private void assertNoticeAssignments(Multimap<TransitEntity, Notice> map) {
+  private void assertNoticeAssignments(Multimap<AbstractTransitEntity, Notice> map) {
     assertNote(map, fId("RUT:ServiceJourney:4-101468-583"), "045", "Notice on ServiceJourney");
     assertNote(
       map,
@@ -200,12 +203,12 @@ public class NetexBundleSmokeTest {
   }
 
   private void assertNote(
-    Multimap<TransitEntity, Notice> map,
+    Multimap<AbstractTransitEntity, Notice> map,
     Serializable entityKey,
     String code,
     String text
   ) {
-    TransitEntity key = map
+    AbstractTransitEntity key = map
       .keySet()
       .stream()
       .filter(it -> entityKey.equals(it.getId()))
@@ -213,13 +216,15 @@ public class NetexBundleSmokeTest {
       .orElseThrow(IllegalStateException::new);
 
     List<Notice> list = list(map.get(key));
-    if (list.size() == 0) fail(
+    assertNotEquals(
+      0,
+      list.size(),
       "Notice not found: " + key + " -> <Notice " + code + ", " + text + ">\n\t" + map
     );
     Notice n = list.get(0);
     assertTrue(n.getId().toString().startsWith("RB:RUT:Notice:"));
-    assertEquals(code, n.getPublicCode());
-    assertEquals(text, n.getText());
+    assertEquals(code, n.publicCode());
+    assertEquals(text, n.text());
     assertEquals(1, list.size());
   }
 
@@ -232,19 +237,13 @@ public class NetexBundleSmokeTest {
   }
 
   private void assetServiceCalendar(CalendarServiceData cal) {
-    assertEquals("[RB:RUT:Authority:RUT]", cal.getAgencyIds().toString());
-    assertEquals(
-      "Europe/Oslo",
-      cal.getTimeZoneForAgencyId(new FeedScopedId("RB", "RUT:Authority:RUT")).toZoneId().toString()
-    );
-
     ArrayList<FeedScopedId> sIds = new ArrayList<>(cal.getServiceIds());
     assertEquals(2, sIds.size());
     FeedScopedId serviceId1 = sIds.get(0);
     FeedScopedId serviceId2 = sIds.get(1);
 
-    List<ServiceDate> dates1 = cal.getServiceDatesForServiceId(serviceId1);
-    List<ServiceDate> dates2 = cal.getServiceDatesForServiceId(serviceId2);
+    List<LocalDate> dates1 = cal.getServiceDatesForServiceId(serviceId1);
+    List<LocalDate> dates2 = cal.getServiceDatesForServiceId(serviceId2);
 
     if (dates1.size() > dates2.size()) {
       var datesTemp = dates1;
@@ -264,6 +263,5 @@ public class NetexBundleSmokeTest {
       dates2.toString()
     );
     assertEquals(2, cal.getServiceIds().size());
-    assertEquals(1, cal.getAgencyIds().size());
   }
 }
